# magic-image-cli

./: .gitignore  build_exe.bat  install_magic.bat  install_magic.sh  magic.bat  magic.py  pyproject.toml  readme.md  requirements.txt  setup_magic.bat
.github/workflows/: release.yml
