[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-image-cli"
version = "2.7"
description = "Your Offline Image Superpower. Resize, convert, and optimize images instantly."
readme = "readme.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  {name = "Absar Alam"}
]
keywords = ["image", "cli", "resize", "convert", "optimization", "imagemagick"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Utilities",
]
dependencies = [
  "Pillow",
  "watchdog",
  "colorama"
]

[project.urls]
"Homepage" = "https://github.com/absaralam/magic-image-cli"
"Bug Tracker" = "https://github.com/absaralam/magic-image-cli/issues"

[project.scripts]
magic = "magic:main"


